--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.12.0",
+    "react-spinners": "^0.17.0",
     "tailwindcss": "^4.1.18",
     "yup": "^1.7.1"
   },
